--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
             <li><a href="https://miyu-ch.github.io/"><code>> Home</code></a></li>
             <li><a href="https://miyu-ch.github.io/invite"><code>Invite</code></a></li>
-            <li><a href="#commands"><code>Commands</code></a></li>
+            <li><a href="https://miyu-ch.github.io/commands"><code>Commands</code></a></li>
         </ul>
     </nav>
 
