--- a/invite.html
+++ b/invite.html
@@ -17,10 +17,9 @@
 
     <nav>
         <ul>
-            <li><a href="#home"><code>Home</code></a></li>
-            <li><a href="#invite"><code>> Invite</code></a></li>
-            <li><a href="#commands"><code>Commands</code></a></li>
-            <!-- Add more navigation links as needed -->
+            <li><a href="https://miyu-ch.github.io/"><code>Home</code></a></li>
+            <li><a href="https://miyu-ch.github.io/invite"><code>> Invite</code></a></li>
+            <li><a href="https://miyu-ch.github.io/commands"><code>Commands</code></a></li>
         </ul>
     </nav>
 
