--- a/invite.html
+++ b/invite.html
@@ -24,9 +24,11 @@
     </nav>
 
     <main class="main">
-        <div class=container>
-            <h1 id="text-invite">Invite</h1>
-        </div>
+        <a href="https://discord.com/oauth2/authorize?client_id=1123590037070680074&permissions=296150887519&scope=bot">
+            <div class=container>
+                <h1 id="text-invite">Invite</h1>
+            </div>
+        </a>
     </main>
 
     <footer>
