--- a/commands.html
+++ b/commands.html
@@ -45,10 +45,12 @@
 
         <section id="home">
             <h1>Fun & Other</h1>
+            <li><code>/help</code> - See all commands available</li>
             <li><code>/hug</code> - Hug someone</li>
             <li><code>/punch</code> - Punch someone</li>
             <li><code>/lovecalc</code> - See how much is the love between you and someone else</li>
             <li><code>/ping</code> - Know how is your connection going</li>
+            <li><code>/survey</code> - Report a bug/issue, a feedback or suggest a feature</li>
             <li><code>/news</code> - Check the latest news and updates</li>
         </section>
 
