--- a/invite.html
+++ b/invite.html
@@ -20,15 +20,14 @@
             <li><a href="https://miyu-ch.github.io/"><code>Home</code></a></li>
             <li><a href="https://miyu-ch.github.io/invite"><code>> Invite</code></a></li>
             <li><a href="https://miyu-ch.github.io/commands"><code>Commands</code></a></li>
+            <li><a href="https://miyu-ch.github.io/guide"><code>Guide</code></a></li>
         </ul>
     </nav>
 
     <main class="main">
-        <a href="https://discord.com/oauth2/authorize?client_id=1123590037070680074&permissions=296150887519&scope=bot">
-            <div class=container>
-                <h1 id="text-invite">Invite</h1>
-            </div>
-        </a>
+        <div class=container>
+            <h1 id="text-invite">Invite</h1>
+        </div>
     </main>
 
     <footer>
