--- a/commands.html
+++ b/commands.html
@@ -19,6 +19,7 @@
             <li><a href="https://miyu-ch.github.io/"><code>Home</code></a></li>
             <li><a href="https://miyu-ch.github.io/invite"><code>Invite</code></a></li>
             <li><a href="https://miyu-ch.github.io/commands"><code>> Commands</code></a></li>
+            <li><a href="https://miyu-ch.github.io/guide"><code>Guide</code></a></li>
         </ul>
     </nav>
 
@@ -45,12 +46,10 @@
 
         <section id="home">
             <h1>Fun & Other</h1>
-            <li><code>/help</code> - See all commands available</li>
             <li><code>/hug</code> - Hug someone</li>
             <li><code>/punch</code> - Punch someone</li>
             <li><code>/lovecalc</code> - See how much is the love between you and someone else</li>
             <li><code>/ping</code> - Know how is your connection going</li>
-            <li><code>/survey</code> - Report a bug/issue, a feedback or suggest a feature</li>
             <li><code>/news</code> - Check the latest news and updates</li>
         </section>
 
