--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <li><a href="https://miyu-ch.github.io/"><code>> Home</code></a></li>
             <li><a href="https://miyu-ch.github.io/invite"><code>Invite</code></a></li>
             <li><a href="https://miyu-ch.github.io/commands"><code>Commands</code></a></li>
+            <li><a href="https://miyu-ch.github.io/guide"><code>Guide</code></a></li>
         </ul>
     </nav>
 
