--- a/commands.html
+++ b/commands.html
@@ -34,6 +34,7 @@
             <li><code>/clear</code> - Clear a certain amount of messages</li>
             <li><code>/banwords</code> - Add or remove words in the banwords list</li>
             <li><code>/banwords_list</code> - See the banwords list</li>
+            <li><code>/points add/remove</code> - Add or remove points for/from someone</li>
             <li><code>Report</code> - To report, right-click on a message, then on Applications and Report</li>
         </section>
 
@@ -65,6 +66,14 @@
             <h1>Economy (Work in progress)</h1>
             <li><code>/claim</code> - Claim your points for the month</li>
             <li><code>/colors</code> - Earn points by choosing a color</li>
+            <li><code>/shop</code> - See items available in the server's shop</li>
+            <li><code>/inventory</code> - See your or someone else's inventory</li>
+            <li><code>/buy</code> - Buy an item from the shop</li>
+            <li><code>/drop</code> - Remove an item from your inventory</li>
+            <li><code>/hourly</code> - Claim your points every 3 hours</li>
+            <li><code>/fish</code> - Earn points by fishing</li>
+            <li><code>/points add/remove</code> - Add or remove points for/from someone</li>
+            
         </section>
 
         
