--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
             <h2>How do I know what are the latest updates ?</h2>
             <p>If you've invited Miyuchan in your discord server, do <code>/news</code></p>
         </section>
+
+        <img id="img" src="cadre_color.svg" />
     </main>
 
     <footer>
